SERVER-56062 CappedPositionLost during an index builds collection scan phase restarts